--- a/views/css/agency.css
+++ b/views/css/agency.css
@@ -4,7 +4,6 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-
 body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -33,17 +32,19 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
+    text-decoration: none;
 }
 
 a {
     color: #fed136;
 }
 
+
 a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #fec503;
+    color: #2C0000;
 }
 
 h1,
@@ -435,7 +436,7 @@ section h3.section-subheading {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(254,209,54,.9);
+    background: #2C0000;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
